# skeleton_optimizer

./: CMakeLists.txt  README.md  package.xml
config/: calib_sbj01.yaml  calib_test.yaml  links_configuration.yaml
include/skeleton_optimizer/: CostFunction.h  Optimizer.h  utils.h
launch/: custom_configuration_example.launch  default.launch  default.launch.py  hiros_skeleton_optimizer_default.launch
src/: CostFunction.cpp  Optimizer.cpp  main.cpp  utils.cpp
srv/: Calibrate.srv  ChangeId.srv
