<?xml version="1.0"?>
<package format="2">
  <name>hiros_skeleton_optimizer</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained skeleton optimizer package</description>
  <maintainer email="mattia.guidolin@phd.unipd.it">mguidolin @ Hi-ROS</maintainer>
  <maintainer email="luca.tagliapietra@unipd.it">lucaTagliapietra @ Hi-ROS</maintainer>
  <license>TODO</license>

  <url type="website">https://gitlab.com/hi-ros</url>
  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
  <author email="luca.tagliapietra@unipd.it">Luca Tagliapietra</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>hiros_skeleton_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
