<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>hiros_skeleton_optimizer</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained skeleton optimizer package</description>
  <maintainer email="mattia.guidolin@unipd.it">mguidolin @ Hi-ROS</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/hiros-unipd</url>
  <author email="mattia.guidolin@unipd.it">Mattia Guidolin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>hiros_skeleton_msgs</depend>
  <depend>hiros_skeleton_tracker</depend>
</package>

